Margin was fixed to allow header text to be visible

--- a/style.css
+++ b/style.css
@@ -369,7 +369,7 @@ nav .fa-solid{
     }
 
     .header-text{
-        margin-top: 150%;
+        margin-top: 100%;
         font-size: 16px;
     }
 
